wip/okc-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: okc
  labels:
    redis-namespace: "true"
