wip/live-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vietnam-live
  name: vietnam-live
  namespace: okc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vietnam-live
  template:
    metadata:
      labels:
        app: vietnam-live
    spec:
      imagePullSecrets:
      - name: ecr-registry
      containers:
      - image: 494634321140.dkr.ecr.ap-northeast-2.amazonaws.com/vietnam-live:latest
        name: sfu
        ports:
          - name: http
            protocol: TCP
            containerPort: 8080
