wip/sfu-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vietnam-sfu-gateway
  name: vietnam-sfu-gateway
  namespace: okc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vietnam-sfu-gateway
  template:
    metadata:
      labels:
        app: vietnam-sfu-gateway
        redis-client: "true"
    spec:
      imagePullSecrets:
      - name: ecr-registry
      containers:
      - image: 494634321140.dkr.ecr.ap-northeast-2.amazonaws.com/vietnam-sfu-gateway:latest
        name: sfu
        ports:
          - name: http
            protocol: TCP
            containerPort: 8080
