wip/static-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vietnam-static
  name: vietnam-static
  namespace: okc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vietnam-static
  template:
    metadata:
      labels:
        app: vietnam-static
    spec:
      imagePullSecrets:
      - name: ecr-registry
      containers:
      - image: 494634321140.dkr.ecr.ap-northeast-2.amazonaws.com/vietnam-static:latest
        name: static
        ports:
          - name: http
            protocol: TCP
            containerPort: 80
