wip/sfu-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: vietnam-sfu-gateway-svc
  name: vietnam-sfu-gateway-svc
  namespace: okc
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: vietnam-sfu-gateway
  type: ClusterIP
status:
  loadBalancer: {}
