wip/static-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: vietnam-static-svc
  name: vietnam-static-svc
  namespace: okc
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: vietnam-static
  type: ClusterIP
status:
  loadBalancer: {}
