wip/okc-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: okc-ingress
  namespace: okc
spec:
  rules:
  - host: vn-bfc.dev.kidsloop.net
    http:
      paths:
      - backend:
          serviceName: vietnam-static-svc
          servicePort: 80
        path: /
      - backend:
          serviceName: vietnam-live-svc
          servicePort: 80
        path: /graphql
      - backend:
          serviceName: vietnam-sfu-gateway-svc
          servicePort: 80
        path: /sfu
